# Tileflow

./: .gitignore  CMakeLists.txt  README.md  main.py  pyproject.toml
docs/: design.md  implementation-roadmap.md  native-build.md  native-mlir-architecture.md
docs/roadmap/: index.md  phase-0-foundation.md  phase-1-python-dsl.md  phase-10-oss-course.md  phase-2-layout-system.md  phase-3-pass-infrastructure.md  phase-4-pipelining.md  phase-5-mlir-dialect.md  phase-6-python-native-mlir.md  phase-7-lowering-backends.md  phase-8-runtime-jit-packaging.md  phase-9-examples.md  step-0-1-repository-hygiene.md  step-0-2-first-vertical-slice.md  step-1-1-kernel-annotations.md  step-1-2-expressions.md  step-1-3-tensor-indexing.md  step-1-4-control-flow.md  step-10-1-doc-architecture.md  step-10-2-contributor-standards.md  step-10-3-course-packaging.md  step-2-1-layout-algebra.md  step-2-2-access-patterns.md  step-2-3-layout-inference.md  step-2-4-shared-memory-tiles.md  step-3-1-pass-manager.md  step-3-2-verification.md  step-3-3-canonicalization.md  step-4-1-pipeline-ir.md  step-4-2-double-buffering.md  step-4-3-async-copy.md  step-5-1-realistic-mlir-text.md  step-5-2-dialect-op-spec.md  step-5-3-native-dialect-skeleton.md  step-5-4-core-dialect-ops.md  step-6-1-bindings-strategy.md  step-6-2-ffi-smoke-binding.md  step-6-3-native-emitter.md  step-7-1-standard-dialects.md  step-7-2-cpu-or-llvm.md  (+9 more)
examples/: tilelang_matmul.py  vector_add.py
mlir/: CMakeLists.txt
mlir/include/: CMakeLists.txt
mlir/include/tileflow/Dialect/: CMakeLists.txt
mlir/include/tileflow/Dialect/TileFlow/IR/: CMakeLists.txt  TileFlowDialect.h  TileFlowDialect.td  TileFlowOps.h  TileFlowOps.td
mlir/include/tileflow/Transforms/: CMakeLists.txt  Passes.h  Passes.td
mlir/lib/: CMakeLists.txt
mlir/lib/Dialect/TileFlow/IR/: CMakeLists.txt  TileFlowDialect.cpp
mlir/lib/Transforms/: CMakeLists.txt  FrontendVerify.cpp
mlir/python/: CMakeLists.txt  TileFlowPasses.cpp
mlir/tools/: CMakeLists.txt
mlir/tools/tileflow-opt/: CMakeLists.txt  tileflow-opt.cpp
src/tileflow/: __init__.py  _typing.py  ir.py  language.py  layout.py  typing.py
src/tileflow/_mlir/: __init__.py
src/tileflow/compiler/: __init__.py  ast.py  ast_frontend.py  builder.py  compile.py  compiler.py  jit.py  mlir.py  mlir_emitter.py  mlir_types.py  native.py  passes.py  pipeline.py
src/tileflow/dsl/: __init__.py  ast.py  ir.py  jit.py  kernel.py  language.py  proxy.py  tensor.py
src/tileflow/language/: __init__.py  allocate.py  dtypes.py  ir.py  kernel.py  loop.py  op.py  proxy.py
tests/: 01-copy.py  03-outer-vector-add.py  04-backward-op.py  05-reduce-sum.py  06-softmax.py  07-flash-attention-2.py  07-flash-attention-orig.py  07-flash-attention.py  08-matrix.py  09-conv.py  10-dquant.py  test_allocation_types.py  test_compile.py  test_example_kernels.py  test_mlir_emitter.py  test_mlir_types.py  test_nested_loop.py
tests/mlir/: logical_ops.mlir  vector_add.mlir
