[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tileflow"
version = "0.0.0"
description = "Experimental Python DSL compiler with layout inference and MLIR lowering."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "TileFlow Contributors" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Compilers",
]
dependencies = []


[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["ref", ".git", ".venv", "build", "dist"]

[dependency-groups]
dev = ["pytest>=9.1.0", "ruff>=0.15.17"]
