[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tileflow"
version = "0.0.0"
description = "Experimental Python DSL compiler with layout inference and MLIR lowering."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "TileFlow Contributors" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Compilers",
]
dependencies = [
    "numpy>=2.5.1",
    "pybind11>=3.0.4",
]

[tool.pyright]
include = ["src", "examples", "tests"]
exclude = ["ref", "**/__pycache__"]
reportInvalidTypeForm = "none"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tileflow._mlir" = ["*.so"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["ref", ".git", ".venv", "build", "dist"]
log_cli = true
log_cli_level = "DEBUG"

[dependency-groups]
dev = ["pytest>=9.1.0", "ruff>=0.15.17"]
